--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -144,10 +144,10 @@
                   <ion-row>
                     <ion-col>
                       <app-aggregates
-                        triggerStatus="trigger-active"
+                        areaStatus="triggered-or-warned"
                       ></app-aggregates>
                       <app-aggregates
-                        triggerStatus="trigger-stopped"
+                      areaStatus="stopped"
                       ></app-aggregates>
                     </ion-col>
                   </ion-row>
