--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -25,8 +25,8 @@
                   getAggregatesHeader(mapView | async).subHeaderLabel
                 "
               ></ion-text
-            ></ion-label> </ion-col
-          >
+            ></ion-label>
+          </ion-col>
         </ion-item>
       </ion-col>
     </ion-row>
