--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -146,9 +146,7 @@
                       <app-aggregates
                         areaStatus="triggered-or-warned"
                       ></app-aggregates>
-                      <app-aggregates
-                      areaStatus="stopped"
-                      ></app-aggregates>
+                      <app-aggregates areaStatus="stopped"></app-aggregates>
                     </ion-col>
                   </ion-row>
                   <ion-row>
