--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -253,7 +253,30 @@
 
     <ng-container *ngIf="eventState?.event?.thresholdReached">
       <ng-container *ngIf="disasterTypeSettings.enableEarlyActions">
-        <ion-item *ngIf="!area.eapActions.length" class="background-light">
+        <ion-item
+          *ngIf="adminLevel > disasterTypeSettings.defaultAdminLevel"
+          class="background-light"
+        >
+          <ion-label class="ion-text-wrap">
+            {{
+              'chat-component.common.save-actions.no-actions-admin-level'
+                | translate
+                  : {
+                      defaultAdminAreaLabel:
+                        country.adminRegionLabels[
+                          disasterTypeSettings.defaultAdminLevel
+                        ].singular
+                    }
+            }}</ion-label
+          ></ion-item
+        >
+        <ion-item
+          *ngIf="
+            adminLevel === disasterTypeSettings.defaultAdminLevel &&
+            !area.eapActions.length
+          "
+          class="background-light"
+        >
           <ion-label class="ion-text-wrap">
             {{
               'chat-component.common.save-actions.no-actions' | translate
