fix: hide stop trigger btn on deeper levels AB#24074

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -332,7 +332,7 @@
         </form>
       </ng-container>
       <app-ibf-button
-        *ngIf="disasterTypeSettings?.enableStopTrigger"
+        *ngIf="disasterTypeSettings?.enableStopTrigger && placeCode?.adminLevel === disasterTypeSettings.defaultAdminLevel"
         (click)="openToggleTriggerPopup(area, true)"
         [disabled]="!area.activeTrigger"
         backgroundColor="ibf-primary"
