fix: make stopped areas work on deeper levels AB#24076

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -150,6 +150,9 @@
       <app-ibf-button
         (click)="openToggleTriggerPopup(area, false)"
         [disabled]="!area.activeTrigger"
+        *ngIf="
+        disasterTypeSettings?.enableStopTrigger &&
+        placeCode?.adminLevel === disasterTypeSettings.defaultAdminLevel"
         backgroundColor="ibf-no-alert-primary"
       >
         {{
