--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -151,8 +151,9 @@
         (click)="openToggleTriggerPopup(area, false)"
         [disabled]="!area.activeTrigger"
         *ngIf="
-        disasterTypeSettings?.enableStopTrigger &&
-        placeCode?.adminLevel === disasterTypeSettings.defaultAdminLevel"
+          disasterTypeSettings?.enableStopTrigger &&
+          placeCode?.adminLevel === disasterTypeSettings.defaultAdminLevel
+        "
         backgroundColor="ibf-no-alert-primary"
       >
         {{
