--- a/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
@@ -1,5 +1,5 @@
 <ng-container
-  *ngIf="useBreadcrumbs(disasterType | async); then breadcrumbs; else tabs"
+  *ngIf="useBreadcrumbs(disasterType); then breadcrumbs; else tabs"
 ></ng-container>
 <ng-template #breadcrumbs>
   <div class="ion-margin-start breadcrumbs-container">
