fix: show 'drought' instead of eventName fof ZWE drought AB#24043

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -20,7 +20,7 @@
             | translate
               : {
                   firstLeadTimeDate: event.firstLeadTimeDate,
-                  eventName: event.eventName?.split('_')[0],
+                  eventName: event.eventName?.split('_')[0] || disasterTypeLabel,
                   disasterTypeLabel: disasterTypeLabel
                 }
         "
