--- a/interfaces/IBF-dashboard/src/theme/variables.scss
+++ b/interfaces/IBF-dashboard/src/theme/variables.scss
@@ -294,6 +294,9 @@
   ion-button {
     text-transform: none;
   }
+
+  --breadcrumb-height: 24px;
+  --breadcrumb-radius: 12px;
 }
 
 .ion-color-ibf-no-alert-primary {
