--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -70,7 +70,8 @@
 }
 
 .leaflet-popup-content-wrapper {
-  border-radius: 0;
+  border-radius: 8px;
+  font-size: 12px;
 }
 
 .leaflet-ibf-aggregate-pane {
