--- a/interfaces/IBF-dashboard/src/theme/ibf-colors/_index.scss
+++ b/interfaces/IBF-dashboard/src/theme/ibf-colors/_index.scss
@@ -81,6 +81,13 @@
 
   --ion-color-ibf-outline-red: var(--fiveten-error-500);
 
+  --ion-color-success: var(--fiveten-success-500);
+  --ion-color-success-rgb: var(--fiveten-success-500-rgb);
+  --ion-color-success-contrast: var(--fiveten-neutral-000);
+  --ion-color-success-contrast-rgb: var(--fiveten-neutral-000);
+  --ion-color-success-shade: var(--fiveten-success-700);
+  --ion-color-success-tint: var(--fiveten-success-300);
+
   --ion-color-danger: var(--fiveten-error-500);
   --ion-color-danger-rgb: var(--fiveten-error-500-rgb);
   --ion-color-danger-contrast: var(--fiveten-neutral-000);
