reafactor: move popups to angular component AB#25131

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -18,6 +18,7 @@
             | translate: { supportEmailAddress: supportEmailAddress }
         "
         color="danger"
+        class="absolute"
       ></app-tooltip>
     </p>
 
