--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -259,9 +259,11 @@ input:-webkit-autofill:focus {
 }
 
 app-tooltip {
-  position: absolute;
-  top: 4px;
-  right: 8px;
+  &.absolute {
+    position: absolute;
+    top: 4px;
+    right: 8px;
+  }
 }
 
 .tooltip--container {
