--- a/interfaces/IBF-dashboard/src/app/components/leaflet-popup/dynamic-point-popup/dynamic-point-popup.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/leaflet-popup/dynamic-point-popup/dynamic-point-popup.component.scss
@@ -22,6 +22,9 @@
   &.typhoon_track {
     color: var(--ion-color-ibf-primary);
   }
+  &.glofas_stations {
+    color: red;
+  }
 
   padding: 0 8px;
   border-radius: 0 0 8px 8px;
