--- a/interfaces/IBF-dashboard/src/app/components/leaflet-popup/glofas-station-popup-content/glofas-station-popup-content.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/leaflet-popup/glofas-station-popup-content/glofas-station-popup-content.component.html
@@ -1,5 +1,5 @@
 <div style="margin-bottom: 4px;">
-  {{ data.leadTime }} forecast of  <span
+  {{ data?.leadTime }} forecast of  <span
     title="The amount of water moving down a river at a given time and place"
     style="
       text-decoration: underline;
@@ -9,11 +9,11 @@
     >river discharge</span
   >
   in m<sup>3</sup>/s
-  <ng-container *ngIf="data.station.forecastReturnPeriod">
+  <ng-container *ngIf="data?.station?.forecastReturnPeriod">
     <br>
     (Corresponding
     to a return period of
-    <strong>{{data.station.forecastReturnPeriod}}</strong> years)
+    <strong>{{data?.station?.forecastReturnPeriod}}</strong> years)
   </ng-container>
 
 </div>
@@ -23,6 +23,6 @@
   [barWidth]="triggerWidth"
   [barValue]="addComma(barValue) + ' m3/s'"
   thresholdDescription="Trigger activation threshold"
-  [thresholdValue]="triggerWidth"
+  [thresholdValue]="data?.station?.triggerLevel"
   [thresholdPosition]="80"
 ></app-threshold-bar>
