feat: handle missing data + small tweaks AB#25131

--- a/interfaces/IBF-dashboard/src/app/components/leaflet-popup/dynamic-point-popup/dynamic-point-popup.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/leaflet-popup/dynamic-point-popup/dynamic-point-popup.component.html
@@ -1,4 +1,8 @@
-<div class="leaflet--dynamic-point-popup--header" [ngClass]="layerName" [style]="glofasHeaderStyle">
+<div
+  class="leaflet--dynamic-point-popup--header"
+  [ngClass]="layerName"
+  [style]="glofasHeaderStyle"
+>
   <strong>{{ title }}</strong>
 </div>
 <div class="leaflet--dynamic-point-popup--content">
