--- a/interfaces/IBF-dashboard/src/app/components/leaflet-popup/glofas-station-popup-content/glofas-station-popup-content.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/leaflet-popup/glofas-station-popup-content/glofas-station-popup-content.component.html
@@ -1,5 +1,6 @@
-<div style="margin-bottom: 4px;">
-  {{ data?.leadTime }} forecast of  <span
+<div style="margin-bottom: 4px">
+  {{ data?.leadTime }} forecast of
+  <span
     title="The amount of water moving down a river at a given time and place"
     style="
       text-decoration: underline;
@@ -10,19 +11,17 @@
   >
   in m<sup>3</sup>/s
   <ng-container *ngIf="data?.station?.forecastReturnPeriod">
-    <br>
-    (Corresponding
-    to a return period of
-    <strong>{{data?.station?.forecastReturnPeriod}}</strong> years)
+    <br />
+    (Corresponding to a return period of
+    <strong>{{ data?.station?.forecastReturnPeriod }}</strong> years)
   </ng-container>
-
 </div>
 <app-threshold-bar
   [backgroundColor]="barBackgroundColor"
   [textColor]="barTextColor"
   [barWidth]="triggerWidth"
-  [barValue]="addComma(barValue) + ' m3/s'"
+  [barValue]="addComma(barValue)"
   thresholdDescription="Trigger activation threshold"
-  [thresholdValue]="data?.station?.triggerLevel"
+  [thresholdValue]="addComma(data?.station?.triggerLevel)"
   [thresholdPosition]="80"
 ></app-threshold-bar>
