refactor: use new endpoint AB#25126

--- a/interfaces/IBF-dashboard/src/app/components/leaflet-popup/glofas-station-popup-content/glofas-station-popup-content.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/leaflet-popup/glofas-station-popup-content/glofas-station-popup-content.component.html
@@ -22,6 +22,6 @@
   [barWidth]="triggerWidth"
   [barValue]="addComma(barValue)"
   thresholdDescription="Trigger activation threshold"
-  [thresholdValue]="addComma(data?.station?.triggerLevel)"
+  [thresholdValue]="data?.station?.dynamicData?.triggerLevel"
   [thresholdPosition]="80"
 ></app-threshold-bar>
