--- a/interfaces/IBF-dashboard/src/theme/ibf-colors/_index.scss
+++ b/interfaces/IBF-dashboard/src/theme/ibf-colors/_index.scss
@@ -65,19 +65,19 @@
 
   --ion-color-ibf-grey: var(--fiveten-neutral-300);
 
-  --ion-color-ibf-yellow: #FFF500;
+  --ion-color-ibf-yellow: #fff500;
   --ion-color-ibf-yellow-rgb: 254, 255, 2;
-  --ion-color-ibf-yellow-contrast: #7D6906;
+  --ion-color-ibf-yellow-contrast: #7d6906;
   --ion-color-ibf-yellow-contrast-rgb: 0, 0, 0;
-  --ion-color-ibf-yellow-shade: #FFF500;
-  --ion-color-ibf-yellow-tint: #FFF500;
+  --ion-color-ibf-yellow-shade: #fff500;
+  --ion-color-ibf-yellow-tint: #fff500;
 
-  --ion-color-ibf-orange: #F0890D;
+  --ion-color-ibf-orange: #f0890d;
   --ion-color-ibf-orange-rgb: 252, 181, 12;
   --ion-color-ibf-orange-contrast: white;
   --ion-color-ibf-orange-contrast-rgb: 0, 0, 0;
-  --ion-color-ibf-orange-shade: #F0890D;
-  --ion-color-ibf-orange-tint: #F0890D;
+  --ion-color-ibf-orange-shade: #f0890d;
+  --ion-color-ibf-orange-tint: #f0890d;
 
   --ion-color-ibf-outline-red: var(--fiveten-error-500);
 
