fix: set font to montserrat AB#25371

--- a/interfaces/IBF-dashboard/src/app/components/leaflet-popup/dynamic-point-popup/dynamic-point-popup.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/leaflet-popup/dynamic-point-popup/dynamic-point-popup.component.scss
@@ -1,3 +1,7 @@
+* {
+  font-family: var(--ion-font-family);
+}
+
 .leaflet--dynamic-point-popup--header {
   &.gauges {
     background: var(--ion-color-ibf-no-alert-primary);
