fix: update size of unit and sea level AB#25371

--- a/interfaces/IBF-dashboard/src/app/components/leaflet-popup/river-gauge-popup-content/river-gauge-popup-content.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/leaflet-popup/river-gauge-popup-content/river-gauge-popup-content.component.html
@@ -3,8 +3,8 @@
     style="margin-bottom: 4px; display: flex; justify-content: space-between"
   >
     <div>
-      <ion-label style="font-size: 18px; padding-right: 8px">
-        <strong>{{ currentString }}</strong>
+      <ion-label style="padding-right: 8px">
+        <span style="font-size: 18px;"><strong>{{ currentString }}</strong></span>
         {{ 'map-popups.river-gauge.unit' | translate }}
         {{ 'map-popups.river-gauge.sea-level' | translate }}
       </ion-label>
