--- a/interfaces/IBF-dashboard/src/app/components/leaflet-popup/glofas-station-popup-content/glofas-station-popup-content.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/leaflet-popup/glofas-station-popup-content/glofas-station-popup-content.component.html
@@ -14,7 +14,8 @@
     <ng-container *ngIf="data?.station?.dynamicData?.forecastReturnPeriod">
       <br />
       (Corresponding to a return period of
-      <strong>{{ data?.station?.dynamicData?.forecastReturnPeriod }}</strong> years)
+      <strong>{{ data?.station?.dynamicData?.forecastReturnPeriod }}</strong>
+      years)
     </ng-container>
   </div>
   <app-threshold-bar
