feat: get severity level per triggered area AB#25832

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -172,6 +172,9 @@
           ><span *ngIf="actionIndicatorNumberFormat === 'perc'">{{
             area.actionsValue | percent: '.0-0'
           }}</span>
+          <span *ngIf="area.severityLevel"> - {{
+            area.severityLevel
+          }}</span>
         </p>
       </li>
     </ul>
@@ -222,6 +225,9 @@
           }}</span
           ><span *ngIf="actionIndicatorNumberFormat === 'perc'">{{
             area.actionsValue | percent: '.0-0'
+          }}</span>
+          <span *ngIf="area.severityLevel"> - {{
+            area.severityLevel
           }}</span>
         </p>
       </li>
