feat: if intermediate only show portal in warning state AB#25873

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -88,7 +88,8 @@
             | translate
               : {
                   firstLeadTimeDate: event.firstLeadTimeDate,
-                  eventName: event.eventName?.split('_')[0]
+                  eventName: event.eventName?.split('_')[0],
+                  disasterTypeLabel: disasterTypeLabel
                 }
         "
       ></p>
