fix: change max glofas class to red AB#25843

--- a/interfaces/IBF-dashboard/src/theme/ibf-colors/design-system-colors/_index.scss
+++ b/interfaces/IBF-dashboard/src/theme/ibf-colors/design-system-colors/_index.scss
@@ -42,6 +42,8 @@
   --fiveten-error-700: #8a0f32;
   --fiveten-error-800: #410a1a;
 
+  --fiveten-glofas-trigger-700: #c70000;
+
   --fiveten-link-700: #124ad6;
 
   --fiveten-navy-100-rgb: 242, 245, 253;
