--- a/interfaces/IBF-dashboard/src/app/components/leaflet-popup/threshold-bar/threshold-bar.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/leaflet-popup/threshold-bar/threshold-bar.component.html
@@ -2,12 +2,14 @@
   <div [style]="barBackgroundStyle">
     <div [style]="barThresholdStyle">
       <div [style]="barLevelStyle">
-        {{ barValue }}<sup *ngIf="unit">{{unit}}</sup>
+        {{ barValue }}<sup *ngIf="unit">{{ unit }}</sup>
       </div>
     </div>
   </div>
 </div>
 <div [style]="descriptionStyle">{{ thresholdDescription }}:</div>
 <div [style]="valueStyle">
-  <strong>{{ thresholdValue }}<sup *ngIf="unit">{{unit}}</sup></strong>
+  <strong
+    >{{ thresholdValue }}<sup *ngIf="unit">{{ unit }}</sup></strong
+  >
 </div>
