fix: handle warning leadtime in chat AB#26938

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -33,7 +33,7 @@
                   timeUnit: event.timeUnit,
                   disasterTypeLabel: disasterTypeLabel,
                   firstLeadTimeDate: event.firstLeadTimeDate,
-                  firstTriggerLeadTimeDate: event.firstTriggerLeadTimeDate,
+                  firstTriggerLeadTimeDate: event.firstTriggerLeadTimeDate || event.firstLeadTimeDate,
                   eventName:
                     event.eventName?.split('_')[0] || disasterTypeLabel,
                   duration: event.duration,
@@ -85,7 +85,7 @@
             : {
                 startDate: event.startDate,
                 firstLeadTimeDate: event.firstLeadTimeDate,
-                firstTriggerLeadTimeDate: event.firstTriggerLeadTimeDate,
+                firstTriggerLeadTimeDate: event.firstTriggerLeadTimeDate || event.firstLeadTimeDate,
                 eventName: event.eventName?.split('_')[0],
                 leadTime: event.firstLeadTimeLabel,
                 timeUnit: event.timeUnit,
