--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -44,7 +44,7 @@
 
   <!-- No event -->
   <app-event-speech-bubble
-    *ngIf="!eventState?.activeTrigger"
+    *ngIf="!eventState?.events?.length > 0"
     [type]="'no-event'"
     [event]="null"
     [selectedEvent]="eventState?.event?.eventName"
@@ -59,7 +59,7 @@
   ></app-event-speech-bubble>
 
   <!-- Active event -->
-  <ng-container *ngIf="eventState?.activeTrigger">
+  <ng-container *ngIf="eventState?.events?.length > 0">
     <ng-container *ngFor="let event of eventState?.events">
       <app-event-speech-bubble
         *ngIf="
@@ -101,7 +101,7 @@
     </ng-container>
   </ng-container>
 
-  <ng-container *ngIf="eventState?.activeTrigger">
+  <ng-container *ngIf="eventState?.events?.length > 0">
     <app-dialogue-turn
       *ngFor="let area of filteredStoppedAreas; first as isFirst"
       [isConnected]="true"
@@ -134,7 +134,6 @@
       ></p>
       <app-ibf-button
         (click)="openToggleTriggerPopup(area, false)"
-        [disabled]="!area.activeTrigger"
         *ngIf="
           countryDisasterSettings?.enableStopTrigger &&
           placeCode?.adminLevel === countryDisasterSettings.defaultAdminLevel
@@ -327,7 +326,6 @@
           placeCode?.adminLevel === countryDisasterSettings.defaultAdminLevel
         "
         (click)="openToggleTriggerPopup(area, true)"
-        [disabled]="!area.activeTrigger"
         backgroundColor="ibf-white"
         textColor="ibf-no-alert-primary"
         borderColor="ibf-no-alert-secondary"
