fix: disable national view if just 1 event AB#27047

--- a/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/admin-level/admin-level.component.html
@@ -12,6 +12,7 @@
           : 'breadcrumb-start'
       "
       [class.selected]="currentMapView === mapViewEnum.national"
+      [disabled]="disableNationalView()"
       (click)="
         clickBreadcrumbButton(
           mapViewEnum.national,
