fix: hide first warning dates AB#26926

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -20,7 +20,7 @@
     </span>
     <p>
       <span
-        *ngIf="!event.duration"
+        *ngIf="!event.duration && showFirstWarningDate()"
         [innerHTML]="
           'chat-component.' +
             disasterTypeName +
